[package]
name = "kzones-config"
description = "Make definitions of kzones layouts easier"
version = "0.1.0"
authors = ["Mirosław Błażej <miro662@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/miro662/kzones-config"
license = "Apache-2.0"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
clap = {version = "4.5", features = ["derive"]}
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
serde_json = "1.0.128"
snafu = "0.8.5"
